fix audit findings header

--- a/365InspectDefaultTemplate.html
+++ b/365InspectDefaultTemplate.html
@@ -885,7 +885,7 @@
         <span class="c2"></span>
     </h1>
     <h1 class="c19" id="h.u5r5mzm6at7q">
-        <span class="c2">O365 Audit Findings</span>
+        <span class="c2">Microsoft 365 Audit Findings</span>
     </h1>
     <p class="c6">
         <span>The following issues were discovered during the automated Microsoft 365 Assessment. These findings are
